# lesoon-client

./: README.md  setup.cfg
examples/: config.py  simple_client.py
requirements/: core.txt  tests.txt
src/lesoon_client/: __init__.py  base.py  exceptions.py  utils.py  wrappers.py
src/lesoon_client/core/: base.py  exceptions.py
src/lesoon_client/public/: __init__.py  id_center_client.py
src/lesoon_client/wrappers/: client.py  utils.py
tests/: conftest.py  resources.py  test_base.py  test_wrappers.py
