[metadata]
name = lesoon-client
version = attr: lesoon_client.__version__
author = huang.jw
author_email = huangjiawen@belle.net.cn
description = A restful client for lesoon application
classifiers =
    Development Status :: 1 - Start
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
package_dir = = src
python_requires = >= 3.8
include_package_data = True
zip_safe = False
install_requires =
    requests>=2.25.1
    lesoon-common==0.0.3

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
filterwarnings =
    error
    ignore::DeprecationWarning
    ignore::UserWarning
    ignore::ImportWarning

[yapf]
based_on_style = google
split_before_expression_after_opening_paren = True


[devpi:upload]
formats = sdist.tgz,bdist_wheel

[mypy]
files = src/lesoon_client
python_version = 3.8
show_error_codes = True
allow_redefinition = True
no_implicit_optional = True
local_partial_types = True
# no_implicit_reexport = True
strict_equality = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unused_ignores = False


[mypy-lesoon_common.*]
ignore_missing_imports = True

[mypy-requests.*]
ignore_missing_imports = True

[mypy-opentracing.*]
ignore_missing_imports = True

[mypy-opentracing_instrumentation.*]
ignore_missing_imports = True
